--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,9 @@
 <div class="container ng-cloak">
 
     <div class="geckoboard">
-      <h2>A<span ng-bind="main.sum() | currency"></span></h2>
+      <h2 ng-class="{'increased': main.sum >= 0, 'decreased': main.sum < 0}">
+        <span class="total" ng-bind="main.sum | currency : 'A$'"></span>
+      </h2>
 
       <div class="row">
         <crypto-component ng-repeat="(key,value) in main.data track by $index"
