Adjust XLM values.

--- a/src/app/main/main-style.scss
+++ b/src/app/main/main-style.scss
@@ -93,9 +93,10 @@ body {
   .arrow {
     width: 0;
     height: 0;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
     display: inline-block;
+    margin-bottom: 2px;
   }
 
   .total {
