--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -11,6 +11,21 @@
         </crypto-component>
       </div>
 
+      <!--<br/>-->
+      <!--<button class="btn btn-default btn-primary pull-right" ng-click="main.showMore = !main.showMore">-->
+        <!--{{ main.showMore ? 'Less' : 'More' }}...-->
+      <!--</button>-->
+      <!--<div ng-if="main.showMore">-->
+        <!--<h4>Balances</h4>-->
+        <!--<div ng-repeat="(key,value) in main.data ">-->
+          <!--<div class="row">-->
+            <!--<div class="col-xs-4">{{ main.currencies[key].krakenKey }}</div>-->
+            <!--<div class="col-xs-4 text-right">{{ main.currencies[key].quantity | number : 4 }}</div>-->
+            <!--<div class="col-xs-4 text-right">{{ value.value | currency  }}</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+
     </div>
   </div></div></div>
 
